src/Styles/App.css
body {
  text-align: center;
  background-image: url("../img/background.jpg");
  background-position: center;
  background-repeat: no-repeat;
  background-size: cover;
  color: white;
  font-family: "Trebuchet MS", "Lucida Sans Unicode", "Lucida Grande", "Lucida Sans", Arial, sans-serif;
  font-size: 16px;
}

h1 {
  text-transform: uppercase;
  margin: 1vh 0;
  font-size: 2rem;
}

h2 {
  margin-top: 40vh;
  font-size: 1.5rem;
}

p {
  margin-top: 1vh;
  font-size: 1.8rem;
}

img {
  width: 15vh;
  margin: 0.5vh;
  cursor: pointer;
  opacity: 0.5;
}

img:hover {
  opacity: 1;
}

button {
  display: inline-block;
  height: 5vh;
  width: 200px;
  text-transform: uppercase;
  font-size: 1.5rem;
  margin: 10px auto;
  background-color: #22304b;
  border: 1.5px solid white;
  color: white;
  transition: 0.2s;
}

button:hover {
  background-color: #000716;
  cursor: pointer;
}

a {
  display: block;
  text-decoration: none;
  color: white;
  transition: 0.2s;
}

a:hover {
  color: #384e7c;
}

.App {
  width: 100%;
  min-height: 100vh;
}

@media (min-width: 700px) {
  img {
    width: 20vh;
  }
}

